test/TestSuite/Syntax/Errors/overtime_range.tjp
project test "Test" "1.0" 2007-04-22 +2m

resource tux "Tux"

task foo "Foo" {
	start ${projectstart}
}

supplement resource tux {
# MARK: error 11 overtime_range	
	booking foo ${projectstart} +1h { overtime 3 }
}

